--- a/Baratheon/styles/songStyles.css
+++ b/Baratheon/styles/songStyles.css
@@ -1,8 +1,8 @@
-.song *, .song {
-    border: solid 1px red;
-}
+/*.song *, .song {*/
+/*border: solid 1px red;*/
+/*}*/
 
-h1, div, section{
+h1, div, section {
     margin: 0;
     padding: 0;
     border: 0;
@@ -17,18 +17,28 @@ html {
 
 .song {
     width: 80rem;
-    margin-top: 25px;
+    margin-top: 20px;
     font-size: 16px;
+
 }
 
-.song > section, .playButton, .song header>div,
-.songIcon,  footer section {
+.song>section {
+    border-bottom: solid 1px gray;
+}
+
+.song .playButton, .song .songIcon {
+    border: solid 1px #000;
+}
+
+.song > section, .playButton, .song header > div,
+.songIcon, footer section {
     display: inline-block;
     vertical-align: top;
 }
 
 .song .duration {
     float: right;
+    margin: 5px;
 }
 
 .song > section {
@@ -37,11 +47,15 @@ html {
 }
 
 .songName {
-    font-size: 25px;
-    margin-top: 5px;
+    font-size: 18px;
+    margin: 5px 0;
 }
 
-.songIcon{
+.song .songInfo, .song .uploaderName {
+    font-size: 12px;
+}
+
+.songIcon {
     width: 100px;
     background-color: #fff;
 }
@@ -64,7 +78,27 @@ html {
     vertical-align: bottom;
 }
 
-.song footer section:nth-child(2){
+.song footer section:nth-child(2) {
     float: right;
+}
+
+.song .controls {
+    font-size: 8px;
+}
+
+.song .statistics img {
+    width: 15px;
+    height: 15px;
+}
+
+.song .uploaderName, .song .album,
+.song .genre {
+    cursor: pointer;
+    color: darkslategrey;
+}
+
+.song .uploaderName:hover, .song .album:hover,
+.song .genre:hover {
+    text-decoration: underline;
 }
 
