Add confirmation and edit forms

--- a/Baratheon/styles/styles.css
+++ b/Baratheon/styles/styles.css
@@ -8,8 +8,8 @@ main {
 }
 
 .forms {
-    position: absolute;
+    position: fixed;
     width: 100%;
     left: 0;
-    top: 0;
+    top: 100px;
 }
