--- a/Baratheon/styles/footerStyle.css
+++ b/Baratheon/styles/footerStyle.css
@@ -1,7 +1,7 @@
-#section{
+#footer{
     max-width: 120em;
     margin: 10px;
     padding: 10px;
     margin:  0 auto;
-    background-color:#0066FF;
+    background-color: #0066FF;
 }
