--- a/Baratheon/styles/hesderStyle.css
+++ b/Baratheon/styles/hesderStyle.css
@@ -15,7 +15,7 @@
     margin: 10px;
     padding: 10px;
     margin:  0 auto;
-    background-color:#ccccff;
+    background-color: #0066FF;
 }
 .navMenu{
     margin-top: 7em;
@@ -27,9 +27,8 @@
     padding: 10px;
     padding-left: 20px;
     font-size: 20px;
-    background-color: #ffffff;
+    background-color: #FEFF33;
     border-radius: 2px;
-    box-shadow: 10px 10px 5px #888888;
     transition: all .2s linear;
 }
 .navMenu ul li a{
