--- a/Baratheon/styles/hesderStyle.css
+++ b/Baratheon/styles/hesderStyle.css
@@ -15,7 +15,7 @@
     margin: 10px;
     padding: 10px;
     margin:  0 auto;
-    background-color: #0066FF;
+    background-color: #F25835;
 }
 .navMenu{
     margin-top: 7em;
