--- a/Baratheon/styles/styles.css
+++ b/Baratheon/styles/styles.css
@@ -13,3 +13,22 @@ main {
     left: 0;
     top: 100px;
 }
+
+.button {
+    padding: 10px;
+    font-size: 20px;
+    margin-bottom: 10px;
+    text-align: center;
+
+    height: 25px;
+    border-radius: 2px;
+    background-color: #FFFFFF;
+    transition: all .3s ease;
+    display: inline-block;
+}
+
+.button:hover {
+    cursor: pointer;
+    background-color: #000000;
+    color: #FFFFFF;
+}
