--- a/Baratheon/styles/songFormStyle.css
+++ b/Baratheon/styles/songFormStyle.css
@@ -2,18 +2,35 @@
     font-size: 16px;
     margin: 25px auto;
     width: 400px;
-    background: #c0c0c0;
-    box-shadow: 5px 5px #000000;
+    background-color: #6BCCF2;
     padding: 10px;
+    border-radius: 5px;
 }
 
 .songForm input {
     display: block;
     padding: 3px;
     width: 350px;
+    height: 30px;
     margin: 10px auto;
+    border-radius: 5px;
 }
 
 .songForm  h1, .songForm div {
     text-align: center;
+}
+.editSongButton{
+    padding: 5px;
+    padding-bottom: 13px;
+    margin-left: 30px;
+    height: 10px;
+    background-color: white;
+    font-size: 15px;
+    width: 60px;
+    border-radius: 5px;
+    display: inline-block;
+    cursor: pointer;
+}
+.editSongButton:hover{
+    background-color: #6BCCF2;
 }
