.sm2-playlist-wrapper ul>li hidden

--- a/Baratheon/styles/playerBarUI-styles.css
+++ b/Baratheon/styles/playerBarUI-styles.css
@@ -754,7 +754,9 @@
     max-height: 9.25em;
     overflow: auto;
 }
-
+.sm2-playlist-wrapper ul>li{
+    display: none;
+}
 .sm2-playlist-wrapper ul li {
     border-bottom: 1px solid rgba(0,0,0,0.05);
 }
